--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@
 # virtual environment
 envi
 
+# tailwind css config file (not needed in production, allows the IDE to autocomplete)
+tailwind.config.js
+
 
 
 ############################
